review french translation

--- a/lang/fr.json
+++ b/lang/fr.json
@@ -9,11 +9,11 @@
     "SWADETOOLS.RemStunnedSuc": "n'est plus Assommé, mais reste Vulnérable",
     "SWADETOOLS.RemStunnedRaise": "n'est plus Assommé, mais reste Vulnérable jusqu'à la fin de son tour",
     "SWADETOOLS.StillStunned": "reste Assommé",
-    "SWADETOOLS.ItsBound": "est Immobilisé, ne peut se déplacer et peut seulement tenter de se libérer en utilsant Athlétisme our Force-2",
+    "SWADETOOLS.ItsBound": "est Immobilisé, ne peut se déplacer et peut seulement tenter de se libérer en utilsant Athlétisme ou Force-2",
     "SWADETOOLS.ItsEntangled": "est Entravé et ne peut se déplacer, peut seulement tenter de se libérer avec une action en utilsant Athlétisme",
     "SWADETOOLS.NoBennies": "n'a plus de Jetons",
     "SWADETOOLS.UnshakenBennyButton": "Enlève l'état Secoué avec un Jeton",
-    "SWADETOOLS.JokersWild": "Un Joker c'est Fou!",
+    "SWADETOOLS.JokersWild": "Un Joker c'est Fou !",
     "SWADETOOLS.JokersWildMsg": "Jetons ont été donné automatiquement!",
     "SWADETOOLS.YouHave": "Vous avez",
     "SWADETOOLS.AsGM": "en tant que MJ",
@@ -26,121 +26,121 @@
     "SWADETOOLS.ModAttr": "Mod. Attribut",
     "SWADETOOLS.Unskilled": "Incompétent",
     "SWADETOOLS.Damage": "Dégâts",
-    "SWADETOOLS.RaiseDmg": "Augmenter les Dégâts",
+    "SWADETOOLS.RaiseDmg": "Augmenter les dégâts",
     "SWADETOOLS.Modifier": "Mod.",
-    "SWADETOOLS.NoweaponInActor": "Votre Personnage n'a pas d'item nommé",
-    "SWADETOOLS.NoskillInActor": "Votre Personnage n'a pas de compétence nommée",
-    "SWADETOOLS.NopowerInActor": "Votre Personnage n'a pas de pouvoir nommé",
-    "SWADETOOLS.NoActorFound": "Pas d'acteur trouvé. Sélectionnez un Token.",
-    "SWADETOOLS.NoActorFoundReroll": "Aucun Personnage trouvé pour dépenser le Jeton (ou il ya des Personnages avec le même nom), dépensez le Jeton et refaites le jet manuellement.",
-    "SWADETOOLS.CriticalFailure": "Echec Critique!",
+    "SWADETOOLS.NoweaponInActor": "Votre personnage n'a pas d'item nommé",
+    "SWADETOOLS.NoskillInActor": "Votre personnage n'a pas de compétence nommée",
+    "SWADETOOLS.NopowerInActor": "Votre personnage n'a pas de pouvoir nommé",
+    "SWADETOOLS.NoActorFound": "Pas d'acteur trouvé. Sélectionnez un token.",
+    "SWADETOOLS.NoActorFoundReroll": "Aucun personnage trouvé pour dépenser le Jeton (ou il y a des personnages avec le même nom), dépensez le Jeton et refaites le jet manuellement.",
+    "SWADETOOLS.CriticalFailure": "Echec Critique !",
     "SWADETOOLS.RerollBtn": "Relancer en dépensant un Jeton",
     "SWADETOOLS.AutoInitWarn": "Activé par défaut avec SWADE Tools, mais désactivé dans la configuration système pour éviter les conflits",
     "SWADETOOLS.Fighting": "Combat",
     "SWADETOOLS.SettingFighting": "Nom de la compétence de Combat",
     "SWADETOOLS.SettingFightingHint": "Compétence à utiliser pour calculer la Parade et déterminer si la cible sera touchée en se basant sur la Parade (dans la plupart des cas, laisser à l'identique).",
-    "SWADETOOLS.RechargeQuestion": "Recharger?",
+    "SWADETOOLS.RechargeQuestion": "Recharger ?",
     "SWADETOOLS.Recharged": "Rechargé",
     "SWADETOOLS.NotEnoughShots": "n'a plus de munitions",
     "SWADETOOLS.NotEnoughPP": "n'a plus assez de Points de Pouvoir",
-    "SWADETOOLS.FailedPP": "Pouoir échoué (1 PP perdu)",  
+    "SWADETOOLS.FailedPP": "Pouvoir échoué (1 PP perdu)",  
     "SWADETOOLS.ExtraPP": "Extra PP",    
-    "SWADETOOLS.SettingUseShots": "Compter les Munitions",
-    "SWADETOOLS.SettingUseShotsHint": "Si vous ne voulez pas décompter automatiquement les munitions lors des Tirs, désactivez la fonction ici.",
+    "SWADETOOLS.SettingUseShots": "Compter les munitions",
+    "SWADETOOLS.SettingUseShotsHint": "Si vous ne voulez pas décompter automatiquement les munitions lors des tirs, désactivez la fonction ici.",
     "SWADETOOLS.SettingUsePP": "Décompter les Points de Pouvoir",
     "SWADETOOLS.SettingUsePPHint": "Si vous ne voulez pas décompter automatiquement les Points de Pouvoir, désactiver la fonction ici.",
     "SWADETOOLS.Targethit": "Toucher",
     "SWADETOOLS.Targetchoose": "Cibler",
     "SWADETOOLS.Targetmiss": "Raté",
-    "SWADETOOLS.Targetraise": "Augmenter",
+    "SWADETOOLS.Targetraise": "Prouesse",
     "SWADETOOLS.Targetnone": "Aucun",
     "SWADETOOLS.Targetshaken": "Secoué",
     "SWADETOOLS.Targetwound": "Blessure",
     "SWADETOOLS.Targetwounds": "Blessures",
-    "SWADETOOLS.ApplyDamage": "Appliquer les Dégâts",
-    "SWADETOOLS.RollDamage": "Lancer les Dégâts",
-    "SWADETOOLS.TargetsTitleSkill": "Cibles: cliquer pour lancer les dégâts",
-    "SWADETOOLS.TargetsTitleDamage": "Cibles: cliquer pour appliquer les dégâts (MJ seulement)",
+    "SWADETOOLS.ApplyDamage": "Appliquer les dégâts",
+    "SWADETOOLS.RollDamage": "Lancer les dégâts",
+    "SWADETOOLS.TargetsTitleSkill": "Cibles : cliquer pour lancer les dégâts",
+    "SWADETOOLS.TargetsTitleDamage": "Cibles : cliquer pour appliquer les dégâts (MJ seulement)",
     "SWADETOOLS.OnlyGM": "Seul le MJ a la permission",
-    "SWADETOOLS.PermissionActor": "Vous n'avez pas les droits pour utiliser ce Personnage (ou sa fonction)",
-    "SWADETOOLS.NotShaken": "Le Personnage n'est plus Secoué",
+    "SWADETOOLS.PermissionActor": "Vous n'avez pas les droits pour utiliser ce personnage (ou sa fonction)",
+    "SWADETOOLS.NotShaken": "Le personnage n'est plus Secoué",
     "SWADETOOLS.PPHint": "PP à ajouter au coût. Peut être négatif",
     "SWADETOOLS.ModHint": "Autorise les nombres ou les dés  (exemple: -2 or 1d6)",
     "SWADETOOLS.ShowDialogCheck": "Montre la fenêtre de dialogue (dégâts et autres actions)",
     "SWADETOOLS.NoItemEquipped": "Aucun item équipé sur le Token selectionné",
-    "SWADETOOLS.TipRofRoll": "Pour la CdT, les touches/augmentation sont définies manuellement",
+    "SWADETOOLS.TipRofRoll": "Pour la CdT, les touches/prouesses sont définies manuellement",
     "SWADETOOLS.TipTargetNumber": "(N) est la difficulté (seulement visible par le MJ)",
-    "SWADETOOLS.SettingsItemNameClick": "Monter les informations en cliquant sur le nom d'une arme/pouvoir/compétence",
-    "SWADETOOLS.SettingsItemNameClickHint": "Cette fonction conserve le comportement par défaut lors d'un click sur un pouvoir/arme/compétence/weapon/(affiche des informations normalement), au lieu d'ouvrir la fenêtre de dialogue.",
-    "SWADETOOLS.SettingsDefaultStatus": "Utiliser les icones par défaut du système lorsque possible",
-    "SWADETOOLS.SettingsDefaultStatusHint": "Activez cette fonction pour utiliser les icones du système au lieu des icones de SWADE Tools.",
+    "SWADETOOLS.SettingsItemNameClick": "Montrer les informations en cliquant sur le nom d'une arme/pouvoir/compétence",
+    "SWADETOOLS.SettingsItemNameClickHint": "Cette fonction conserve le comportement par défaut lors d'un click sur un pouvoir/arme/compétence (affiche des informations normalement), au lieu d'ouvrir la fenêtre de dialogue.",
+    "SWADETOOLS.SettingsDefaultStatus": "Utiliser les icônes par défaut du système lorsque possible",
+    "SWADETOOLS.SettingsDefaultStatusHint": "Activez cette fonction pour utiliser les icônes du système au lieu des icones de SWADE Tools.",
     "SWADETOOLS.SettingsJokersWild": "Désactiver 'Un Joker c'est Fou'",
     "SWADETOOLS.SettingsJokersWildHint": "Cette fonction désactive la distribution automatique d'un Jeton lors du tirage d'un Joker.",
-    "SWADETOOLS.ConvEnd": "Votre Conviction va finit. Vous pouvez dépenser un Jeton pour la maintenir jusqu'au prochain Round.",
+    "SWADETOOLS.ConvEnd": "Votre Conviction va finir. Vous pouvez dépenser un Jeton pour la maintenir jusqu'au prochain Round.",
     "SWADETOOLS.ConvKepp": "Dépenser un Jeton pour une Conviction",
     "SWADETOOLS.AlreadyConvic": "Ce Personnage a déja une Conviction active",
-    "SWADETOOLS.ConvictionKept": "La Conviction a été étendue au round suivant!",
-    "SWADETOOLS.SoakDmg": "Encaisser les Dégâts",
-    "SWADETOOLS.DoSoak": "essaye d'Encaisser les Dégâts",
-    "SWADETOOLS.RoFFinalMod": "Modificateur Final",
+    "SWADETOOLS.ConvictionKept": "La Conviction a été étendue au round suivant !",
+    "SWADETOOLS.SoakDmg": "Encaisser les dégâts",
+    "SWADETOOLS.DoSoak": "essaye d'encaisser les dégâts",
+    "SWADETOOLS.RoFFinalMod": "Modificateur final",
     "SWADETOOLS.settingName": "Atouts, Capacités et Traits",
     "SWADETOOLS.settingNameButton": "Changer les noms par défaut",
-    "SWADETOOLS.settingNameHint": "Changer les noms par défaut qui affectent les Jets automatiquement (abilities are considered as edge items). Si vous utilisez SWADE Core avec un langage géré par SWADE TOOLS, vous n'avez probablement rien à changer.",
+    "SWADETOOLS.settingNameHint": "Changer les noms par défaut qui affectent les Jets automatiquement (les capacités sont considérées comme des atouts). Si vous utilisez SWADE Core avec un langage géré par SWADE TOOLS, vous n'avez probablement rien à changer.",
     "SWADETOOLS.ElanSetting": "Panache",
-    "SWADETOOLS.NoMercySetting" : "Sans Pitié",
-    "SWADETOOLS.IronJawSetting" : "Mâchoire d'Acier",
+    "SWADETOOLS.NoMercySetting" : "Sans pitié",
+    "SWADETOOLS.IronJawSetting" : "Mâchoire d'acier",
     "SWADETOOLS.CombatReflexesSetting": "Combatif",
-    "SWADETOOLS.ConstructSetting": "Créature Artificielle",
+    "SWADETOOLS.ConstructSetting": "Créature artificielle",
     "SWADETOOLS.HardySetting": "Robuste",
     "SWADETOOLS.HardyWarn": " est Robuste, donc un autre résultat Secoué n'a aucun effet",
     "SWADETOOLS.UndeadSetting": "Mort-vivant",
     "SWADETOOLS.settingRules": "Règles d'univers",
     "SWADETOOLS.settingRulesButton": "Sélectionnez des règles d'univers",
-    "SWADETOOLS.settingRulesHint": "Cochez les Règles d'Univers que vous voulez utilisez.",
-    "SWADETOOLS.DumbLuckSetting" : "Chance Insolente",
-    "SWADETOOLS.HardChoicesSetting" : "Choix Cornélien",
+    "SWADETOOLS.settingRulesHint": "Cochez les règles d'univers que vous voulez utilisez.",
+    "SWADETOOLS.DumbLuckSetting" : "Chance insolente",
+    "SWADETOOLS.HardChoicesSetting" : "Choix cornélien",
     "SWADETOOLS.UnarmoredHeroSetting" : "Héros sans armure",
-    "SWADETOOLS.WoundCapSetting" : "Limite de Blessures",
-    "SWADETOOLS.HardChoicesWarn" : "Lors de l'utilisation de Choix Cornélien, les Jetons des PNJs seront ignorés. Voulez vous également désactiver 'Un Joker c'est Fou' et que le MJ débute avec 0 Jetons ? C'est le mode officiel pour Choix Cornélien.",
+    "SWADETOOLS.WoundCapSetting" : "Limite de blessures",
+    "SWADETOOLS.HardChoicesWarn" : "Lors de l'utilisation de Choix cornélien, les Jetons des PNJs seront ignorés. Voulez vous également désactiver 'Un Joker c'est Fou' et que le MJ débute avec 0 Jetons ? C'est le mode officiel pour Choix cornélien.",
     "SWADETOOLS.Yes": "Oui",
     "SWADETOOLS.No": "Non",
     "SWADETOOLS.ConfigDisabled": "configuration a été désactivée pour éviter les conflits avec SWADE Tools",
     "SWADETOOLS.ConfigEnabled": "configuration a été activée automatiquement par SWADE Tools",
     "SWADETOOLS.FightingWarn": "a été modifié de 'Fighting' par vos réglages dans SWADE Tools par : ",
     "SWADETOOLS.SettingsAutoInitStart":"Ne pas tirer l'initiative automatiquement au début d'un combat",
-    "SWADETOOLS.SettingsAutoInitStartHint":"(Nécessite un rechargement) Désactiver l'Initiative automatique au début des combats.",
-    "SWADETOOLS.AutoDisableWarn":"Si activé, SWADE Tools n'activerage pas les réglages suivants automatiquement au démarrage :",
-    "SWADETOOLS.Targetshakenvehicle": "Pertes de Contrôle",
-    "SWADETOOLS.OutOfControlRoll": "essaye d'éviter une Perte de Contrôle",
-    "SWADETOOLS.OutOfControlSuccess": "évite une Perte de Contrôle",
-    "SWADETOOLS.OutOfControlFail": "souffre d'une Perte de Contrôle",
-    "SWADETOOLS.OutOfControlTable": "Table des Pertes de Contrôle",
-    "SWADETOOLS.OutOfControlTableHint": "Choisissez une Table pour effectuer automatiquement un Tirage lorsqu'un véhicule subit une Perte de Contrôle",
-    "SWADETOOLS.GrittyDamage": "Dégâts Handicapants",
-    "SWADETOOLS.GrittyDamageHint": "Choisissez une table pour effectuer un tirage pour les Dégâts Handicapants",
+    "SWADETOOLS.SettingsAutoInitStartHint":"(Nécessite un rechargement) Désactiver l'initiative automatique au début des combats.",
+    "SWADETOOLS.AutoDisableWarn":"Si activé, SWADE Tools n'activera pas les réglages suivants automatiquement au démarrage :",
+    "SWADETOOLS.Targetshakenvehicle": "Pertes de contrôle",
+    "SWADETOOLS.OutOfControlRoll": "essaye d'éviter une Perte de contrôle",
+    "SWADETOOLS.OutOfControlSuccess": "évite une Perte de contrôle",
+    "SWADETOOLS.OutOfControlFail": "souffre d'une Perte de contrôle",
+    "SWADETOOLS.OutOfControlTable": "Table des Pertes de contrôle",
+    "SWADETOOLS.OutOfControlTableHint": "Choisissez une table pour effectuer automatiquement un tirage lorsqu'un véhicule subit une Perte de contrôle",
+    "SWADETOOLS.GrittyDamage": "Dégâts handicapants",
+    "SWADETOOLS.GrittyDamageHint": "Choisissez une table pour effectuer un tirage pour les Dégâts handicapants",
     "SWADETOOLS.Disabled":"Désactivé",
     "SWADETOOLS.NoOperator":"Pas de conducteur dans ce véhicule",
     "SWADETOOLS.NoOperatorSkill":"Pas de compétence de Pilotage trouvée pour ce Véhicule",
-    "SWADETOOLS.WildAttack":"Attaque Totale",
+    "SWADETOOLS.WildAttack":"Attaque totale",
     "SWADETOOLS.UpdateSWADE": "Votre version du système SWADE n'est pas compatible avec le module SWADE Tools. Mettez à jour le système SWADE.",
     "SWADETOOLS.TipRoFLower":"Lors de l'utilisation de la CdT, le résultat le plus faible est ignoré.",
-    "SWADETOOLS.ActDmgHint":"Dégâts à lancer lors d'un click sur Toucher/Augmenter",
+    "SWADETOOLS.ActDmgHint":"Dégâts à lancer lors d'un click sur Toucher/Prouesse",
     "SWADETOOLS.Default":"Défaut",
-    "SWADETOOLS.NoDmgActionDefined": "Il n'y a aucun dégâts défini dans l'action de item. Les dégâts par défaut ont été utilisés (si défini).",
-    "SWADETOOLS.UseSkillSelected": "Utiliser la Compétence",
-    "SWADETOOLS.NoSkillQuestion": "n'a pas de compétence. Voulez vous en utiliser une?",
-    "SWADETOOLS.RangedInMelee":"Armes de Tir en Mélée: Utilisez Parade",
+    "SWADETOOLS.NoDmgActionDefined": "Il n'y a aucun dégâts défini dans l'action de l'objet. Les dégâts par défaut ont été utilisés (si défini).",
+    "SWADETOOLS.UseSkillSelected": "Utiliser la compétence",
+    "SWADETOOLS.NoSkillQuestion": "n'a pas de compétence. Voulez vous en utiliser une ?",
+    "SWADETOOLS.RangedInMelee":"Armes de tir en Mélée : utilisez Parade",
     "SWADETOOLS.IsVulnerable":"est Vunérable",
-    "SWADETOOLS.SeeSituational":"Voir les Modificateurs de Situation",
+    "SWADETOOLS.SeeSituational":"Voir les modificateurs de situation",
     "SWADETOOLS.gangUpBonus":"Bonus d'attaque à plusieurs",
     "SWADETOOLS.TargetTooFar":"La cible est hors de portée extrême",
-    "SWADETOOLS.Extreme":"Portée Extrême",
-    "SWADETOOLS.SettingGangUp": "Calculer le Bonus d'Attaque à Plusieurs (depuis Personnages amis et PNJs ennemis)",
-    "SWADETOOLS.SettingGangUpHint": "Avec cette option, le bonus d'Attaques à Plusieurs sera calculé automatiquement. Les nouveaux personnages seront marqués comme amicaux dans la configuration de leur Token, et les PNJs seront hostiles (vous pouvez modifier cela plus tard, comme un PNJ allié). Si vous voulez modifier globalement tout les Acteurs (PJs et PNJs), utilisez la macro: PC Friendly / NPC Hostile",
-    "SWADETOOLS.FriendlyPCMacroQuestion": "Cela positionnera tout les PJs comme amicaux, et tout les PNJs comme hostiles dans la configuration des Tokens. Procéder?",
-    "SWADETOOLS.FriendlyPCMacroOk": "Tout les PJs sont désormais amicaux, et tout les PNJs hostiles dans le Prototype de Token!",
+    "SWADETOOLS.Extreme":"Portée extrême",
+    "SWADETOOLS.SettingGangUp": "Calculer le bonus d'attaque à plusieurs (depuis personnages amis et PNJs ennemis)",
+    "SWADETOOLS.SettingGangUpHint": "Avec cette option, le bonus d'attaques à plusieurs sera calculé automatiquement. Les nouveaux personnages seront marqués comme amicaux dans la configuration de leur Token, et les PNJs seront hostiles (vous pouvez modifier cela plus tard, comme un PNJ allié). Si vous voulez modifier globalement tous les acteurs (PJs et PNJs), utilisez la macro: PC Friendly / NPC Hostile",
+    "SWADETOOLS.FriendlyPCMacroQuestion": "Cela positionnera tous les PJs comme amicaux, et tout les PNJs comme hostiles dans la configuration des Tokens. Procéder ?",
+    "SWADETOOLS.FriendlyPCMacroOk": "Tous les PJs sont désormais amicaux, et tout les PNJs hostiles dans le Prototype de Token!",
     "SWADETOOLS.DodgeSetting": "Esquive",
     "SWADETOOLS.BlockSetting": "Blocage",
-    "SWADETOOLS.ImprovedBlockSetting": "Grand Blocage",
+    "SWADETOOLS.ImprovedBlockSetting": "Grand blocage",
     "SWADETOOLS.FrenzySetting": "Frénésie"    
 }
