correction Assomé -> Sonné

--- a/lang/fr.json
+++ b/lang/fr.json
@@ -1,14 +1,14 @@
 {
     "SWADETOOLS.Joker":"Joker",
     "SWADETOOLS.UnShakenAttempt": "essais pour récupérer de l'état Secoué",
-    "SWADETOOLS.UnStunnedAttempt": "essais pour enlever Assommer",
+    "SWADETOOLS.UnStunnedAttempt": "essais pour enlever l'état Sonné",
     "SWADETOOLS.RemDistr": "n'est plus Distrait",
     "SWADETOOLS.RemVuln": "n'est plus Vulnérable",
     "SWADETOOLS.RemShaken": "n'est plus Secoué",
     "SWADETOOLS.StillShaken": "reste Secoué",
-    "SWADETOOLS.RemStunnedSuc": "n'est plus Assommé, mais reste Vulnérable",
-    "SWADETOOLS.RemStunnedRaise": "n'est plus Assommé, mais reste Vulnérable jusqu'à la fin de son tour",
-    "SWADETOOLS.StillStunned": "reste Assommé",
+    "SWADETOOLS.RemStunnedSuc": "n'est plus Sonné, mais reste Vulnérable",
+    "SWADETOOLS.RemStunnedRaise": "n'est plus Sonné, mais reste Vulnérable jusqu'à la fin de son tour",
+    "SWADETOOLS.StillStunned": "reste Sonné",
     "SWADETOOLS.ItsBound": "est Immobilisé, ne peut se déplacer et peut seulement tenter de se libérer en utilsant Athlétisme ou Force-2",
     "SWADETOOLS.ItsEntangled": "est Entravé et ne peut se déplacer, peut seulement tenter de se libérer avec une action en utilsant Athlétisme",
     "SWADETOOLS.NoBennies": "n'a plus de Jetons",
