--- a/lang/pt-BR.json
+++ b/lang/pt-BR.json
@@ -179,7 +179,13 @@
     "SWADETOOLS.Success":"Successo",
     "SWADETOOLS.Raises":"Ampliações",
     "SWADETOOLS.Failure":"Falha",
-    "SWADETOOLS.TargetNumber":"Mudar Número Alvo"
+    "SWADETOOLS.TargetNumber":"Mudar Número Alvo",
+    "SWADETOOLS.SettingWildAttackSkills": "Perícias a serem usadas com Ataque Selvagem",
+    "SWADETOOLS.SettingWildAttackSkillsHint": "Lista de Perícias que podem utilizar Ataque Selvagem, separadas por vírgula. Por ex: Lutar, Atletismo, Atirar",
+    "SWADETOOLS.SettingAskCalledShots": "Ataques Localizados para Itens",
+    "SWADETOOLS.SettingAskCalledShotsHint": "Essa opção habilita uma opção de Ataque Localizado quando usando itens de ataque",
+    "SWADETOOLS.CalledShot": "Ataque Localizado",
+    "SWADETOOLS.CalledShotHint": "Penalidades são adicionadas automaticamente, adicione modificadores extras manualmente. Ataques na cabeça causam +4 de dano."
 
 
 }
