--- a/lang/fr.json
+++ b/lang/fr.json
@@ -142,5 +142,49 @@
     "SWADETOOLS.DodgeSetting": "Esquive",
     "SWADETOOLS.BlockSetting": "Blocage",
     "SWADETOOLS.ImprovedBlockSetting": "Grand blocage",
-    "SWADETOOLS.FrenzySetting": "Frénésie"    
+    "SWADETOOLS.FrenzySetting": "Frénésie",
+    "SWADETOOLS.FormationFighterSetting": "Combat en Formation",
+    "SWADETOOLS.SettingShowSituational": "Toujours montrer les modificateurs de situation pour la cible",
+    "SWADETOOLS.SettingShowSituationalHint": "Avec cette option, les modificateurs de cible sont toujours visibles, pas besoin de cliquer sur (?)",
+    "SWADETOOLS.settingCustom": "Customisation",
+    "SWADETOOLS.settingCustomButton": "CUstomiser le module",
+    "SWADETOOLS.settingCustomHint": "Modifier les paramètres par défaut de SWADE Tools.",
+    "SWADETOOLS.StatusIconsSetting":"Utiliser les icones de status",
+    "SWADETOOLS.StatusIconsSettingHint":"Utilise les icones de status du système ou les désactive.",
+    "SWADETOOLS.StatusIconsSettingDefault":"SWADE Tools",
+    "SWADETOOLS.StatusIconsSettingSystem":"système SWADE",
+    "SWADETOOLS.StatusIconsSettingNone":"Désactiver",
+    "SWADETOOLS.SettingNoAutoRoll":"Désactiver les jets automatiques lors de combat",
+    "SWADETOOLS.SettingNoAutoRollHint":"(Nécessite un rechargement) Cette option désactive les jets automatique pour les états Secoué durant les combats.",
+    "SWADETOOLS.sayIsShaken": "est Secoué",
+    "SWADETOOLS.sayIsStunned": "is Stunned",
+    "SWADETOOLS.Scale": "Echelle",
+    "SWADETOOLS.SettinguseScale": "Utiliser l'echelle",
+    "SWADETOOLS.SettinguseScaleHint": "Calcule les modificateyrs d'echelles lors des attaques. Les créatures avec Essaim (capacité spéciale) afficheront une fenêtre de dialogue lors de leurs attaques",
+    "SWADETOOLS.SwatSetting": "Essaim",
+    "SWADETOOLS.SettingreloadX": "Afficher le bouton de Rechargement X",
+    "SWADETOOLS.SettingreloadXHint": "Afficher un bouton pour recharger une quantité spécifique de balles au lieu d'un rechargement complet.",
+    "SWADETOOLS.SituationalRules": "Règles de situation",
+    "SWADETOOLS.Customization": "Customisation",
+    "SWADETOOLS.RulesSettings": "Règles d'univers",
+    "SWADETOOLS.bullets": "tirs",
+    "SWADETOOLS.SettingsSimpleRolls":"Jets de traits simples",
+    "SWADETOOLS.SettingsSimpleRollsHint":"Cette option simplifie la fenêtre de jet des traits",
+    "SWADETOOLS.EditBtn":"Ajouter un modificateur du MJ",
+    "SWADETOOLS.GMMod":"Mod. du MJ",
+    "SWADETOOLS.RetargetBtn":"Utiliser les cibles du MJ",
+    "SWADETOOLS.NoTarget":"Aucune cible selectionnée.",
+    "SWADETOOLS.Total":"Total",
+    "SWADETOOLS.TN":"Diff.",
+    "SWADETOOLS.RaiseCalcBtn":"Compter les Prouesses",
+    "SWADETOOLS.Success":"Succès",
+    "SWADETOOLS.Raises":"Prouesses",
+    "SWADETOOLS.Failure":"Echec",
+    "SWADETOOLS.TargetNumber":"Changer la difficulté",
+    "SWADETOOLS.SettingWildAttackSkills": "Compétences à utiliser pour une Attaque Totale",
+    "SWADETOOLS.SettingWildAttackSkillsHint": "La liste des compétences possibles pour une Attaque Totale, séparée par des virgules. Ex: Combat, Athlétisme, Tir",
+    "SWADETOOLS.SettingAskCalledShots": "Options d'Attaques Ciblées pour les objets",
+    "SWADETOOLS.SettingAskCalledShotsHint": "Cette option affiche une liste de sélection pour les attaques ciblées",
+    "SWADETOOLS.CalledShot": "Attaque Aiblée",
+    "SWADETOOLS.CalledShotHint": "Les pénalités sont ajoutées automatiquement, ajoutez les modificateurs supplémentairs manuellement. Un tir à la tête fournit +4 dommages."
 }
