Add Rapid Fire autodetect
* Add settings for Shooting and Rapid Fire
* Add button for Rapid Fire (Rapid Shot in SW Pathfinder) on
  Shooting-based item rolls

--- a/lang/en.json
+++ b/lang/en.json
@@ -39,6 +39,9 @@
     "SWADETOOLS.Fighting": "Fighting",
     "SWADETOOLS.SettingFighting": "Fighting Skill Name",
     "SWADETOOLS.SettingFightingHint": "Skill name to use for calculate Parry and determine if target will be hit based on Parry (in most cases, leave as it is).",
+    "SWADETOOLS.Shooting": "Shooting",
+    "SWADETOOLS.SettingShooting": "Shooting Skill Name",
+    "SWADETOOLS.SettingShootingHint": "Skill name to use for Shooting",
     "SWADETOOLS.RechargeQuestion": "Reload?",
     "SWADETOOLS.Recharged": "Reloaded",
     "SWADETOOLS.NotEnoughShots": "don't have enough shots",
@@ -143,6 +146,8 @@
     "SWADETOOLS.BlockSetting": "Block",
     "SWADETOOLS.ImprovedBlockSetting": "Improved Block",
     "SWADETOOLS.FrenzySetting": "Frenzy",
+    "SWADETOOLS.RapidFireSetting": "Rapid Fire",
+    "SWADETOOLS.ShootingSkillSetting": "Shooting",
     "SWADETOOLS.FormationFighterSetting": "Formation Fighter",
     "SWADETOOLS.SettingShowSituational": "Always show Situational Modifiers for target",
     "SWADETOOLS.SettingShowSituationalHint": "With this option checked, targets' modifiers will be always visible, no need to click at (?)",
