--- a/lang/en.json
+++ b/lang/en.json
@@ -174,7 +174,7 @@
     "SWADETOOLS.GMMod":"GM Mod.",
     "SWADETOOLS.RetargetBtn":"Use GM targets",
     "SWADETOOLS.NoTarget":"No targets selected.",
-    "SWADETOOLS.Total":"Total",
+    "SWADETOOLS.Total":"Original Total",
     "SWADETOOLS.TN":"TN",
     "SWADETOOLS.RaiseCalcBtn":"Count Raises",
     "SWADETOOLS.Success":"Success",
