--- a/lang/pt-BR.json
+++ b/lang/pt-BR.json
@@ -174,7 +174,7 @@
     "SWADETOOLS.GMMod":"Mod. Mestre",
     "SWADETOOLS.RetargetBtn":"Usar alvos do Mestre",
     "SWADETOOLS.NoTarget":"Nenhum alvo selecionado.",
-    "SWADETOOLS.Total":"Total",
+    "SWADETOOLS.Total":"Total Original",
     "SWADETOOLS.TN":"NA",
     "SWADETOOLS.RaiseCalcBtn":"Contar Ampliações",
     "SWADETOOLS.Success":"Successo",
