--- a/lang/fr.json
+++ b/lang/fr.json
@@ -147,7 +147,7 @@
     "SWADETOOLS.SettingShowSituational": "Toujours montrer les modificateurs de situation pour la cible",
     "SWADETOOLS.SettingShowSituationalHint": "Avec cette option, les modificateurs de cible sont toujours visibles, pas besoin de cliquer sur (?)",
     "SWADETOOLS.settingCustom": "Customisation",
-    "SWADETOOLS.settingCustomButton": "CUstomiser le module",
+    "SWADETOOLS.settingCustomButton": "Customiser le module",
     "SWADETOOLS.settingCustomHint": "Modifier les paramètres par défaut de SWADE Tools.",
     "SWADETOOLS.StatusIconsSetting":"Utiliser les icones de status",
     "SWADETOOLS.StatusIconsSettingHint":"Utilise les icones de status du système ou les désactive.",
@@ -157,7 +157,7 @@
     "SWADETOOLS.SettingNoAutoRoll":"Désactiver les jets automatiques lors de combat",
     "SWADETOOLS.SettingNoAutoRollHint":"(Nécessite un rechargement) Cette option désactive les jets automatique pour les états Secoué durant les combats.",
     "SWADETOOLS.sayIsShaken": "est Secoué",
-    "SWADETOOLS.sayIsStunned": "is Stunned",
+    "SWADETOOLS.sayIsStunned": "est Sonné",
     "SWADETOOLS.Scale": "Echelle",
     "SWADETOOLS.SettinguseScale": "Utiliser l'echelle",
     "SWADETOOLS.SettinguseScaleHint": "Calcule les modificateyrs d'echelles lors des attaques. Les créatures avec Essaim (capacité spéciale) afficheront une fenêtre de dialogue lors de leurs attaques",
@@ -176,15 +176,15 @@
     "SWADETOOLS.NoTarget":"Aucune cible selectionnée.",
     "SWADETOOLS.Total":"Total",
     "SWADETOOLS.TN":"Diff.",
-    "SWADETOOLS.RaiseCalcBtn":"Compter les Prouesses",
+    "SWADETOOLS.RaiseCalcBtn":"Compter les prouesses",
     "SWADETOOLS.Success":"Succès",
     "SWADETOOLS.Raises":"Prouesses",
     "SWADETOOLS.Failure":"Echec",
     "SWADETOOLS.TargetNumber":"Changer la difficulté",
     "SWADETOOLS.SettingWildAttackSkills": "Compétences à utiliser pour une Attaque Totale",
     "SWADETOOLS.SettingWildAttackSkillsHint": "La liste des compétences possibles pour une Attaque Totale, séparée par des virgules. Ex: Combat, Athlétisme, Tir",
-    "SWADETOOLS.SettingAskCalledShots": "Options d'Attaques Ciblées pour les objets",
+    "SWADETOOLS.SettingAskCalledShots": "Options d'attaques ciblées pour les objets",
     "SWADETOOLS.SettingAskCalledShotsHint": "Cette option affiche une liste de sélection pour les attaques ciblées",
-    "SWADETOOLS.CalledShot": "Attaque Aiblée",
+    "SWADETOOLS.CalledShot": "Attaque Ciblée",
     "SWADETOOLS.CalledShotHint": "Les pénalités sont ajoutées automatiquement, ajoutez les modificateurs supplémentairs manuellement. Un tir à la tête fournit +4 dommages."
 }
